2007-09-08  Badlop  <badlop@ono.com>

	* mod_muc_admin: Initial commit.
